# Vm

./: README.md
vm_test_implementation/: CMakeLists.txt  main.cpp
vm_test_implementation/UVM/: VM.cpp  VM.h
vm_test_implementation/UVM/DataTypes/: Object.h  boolean.h  collection.h  d64.h  i32.h  str.h  u128.h  u256.h  u64.h
vm_test_implementation/UVM/DataTypes/Pools/: SharedConstantPool.h  UniqueConstantPool.h
vm_test_implementation/UVM/OPCODES/: Opcodes.h
vm_test_implementation/UVM/STRUCTURES/: Object.h
